content/v2.1/show-jobs.md
---
title: SHOW JOBS
summary: The SHOW JOBS statement lists all currently active schema changes and backup/restore jobs.
toc: true
---

The `SHOW JOBS` [statement](sql-statements.html) lists all of the types of long-running tasks your cluster has performed, including:

- Schema changes through `ALTER TABLE`.
- [`IMPORT`](import.html).
- Enterprise [`BACKUP`](backup.html) and [`RESTORE`](restore.html).

These details can help you understand the status of crucial tasks that can impact the performance of your cluster, as well as help you control them.

{{site.data.alerts.callout_info }} The <code>SHOW JOBS</code> statement shows only long-running tasks. For an exhaustive list of jobs running in the cluster, use the <a href="sql-audit-logging.html">SQL Audit Logging (Experimental)</a> feature.{{site.data.alerts.end }}


## Required privileges

By default, only the `root` user can execute `SHOW JOBS`.

## Synopsis

<div>
{{ partial "{{ page.version.version }}/sql/diagrams/show_jobs.html" . }}
</div>

## Response

The result list of jobs shows first ongoing jobs, then completed
jobs. The list of ongoing jobs is sorted by starting time, whereas the
list of completed jobs is sorted by finished time.

The following fields are returned for each job:

Field | Description
------|------------
`job_id` | A unique ID to identify each job. This value is used if you want to control jobs (i.e., [pause](pause-job.html), [resume](resume-job.html), or [cancel](cancel-job.html) it).
`job_type` | The type of job. Possible values: `SCHEMA CHANGE`, [`BACKUP`](backup.html), [`RESTORE`](restore.html), or [`IMPORT`](import.html).<br><br>Note: Although there is a background job for [`DROP`](drop-table.html) or [`TRUNCATE`](truncate.html), it does not appear in the output of `SHOW JOBS`.
`description` | The command that started the job.
`user_name` | The user who started the job.
`status` | The job's current state. Possible values: `pending`, `running`, `paused`, `failed`, `succeeded`, or `canceled`.
`created` | The `TIMESTAMP` when the job was created.
`started` | The `TIMESTAMP` when the job began running first.
`finished` | The `TIMESTAMP` when the job was `succeeded`, `failed`, or `canceled`.
`modified` | The `TIMESTAMP` when the job had anything modified.
`fraction_completed` | The fraction (between `0.00` and `1.00`) of the job that's been completed.
`error` | If the job `failed`, the error generated by the failure.
`coordinator_id` | The ID of the node running the job.

## Examples

### Show jobs

{{ partial "copy-clipboard.html" . }}
~~~ sql
> SHOW JOBS;
~~~

~~~
+----------------+------------+-------------------------------------------+...
| job_id         | job_type   | description                               |...
+----------------+------------+-------------------------------------------+...
| 27536791415282 | RESTORE    | RESTORE db.* FROM 'azure://backup/db/tbl' |...
+----------------+------------+-------------------------------------------+...
~~~

### Filter jobs

You can filter jobs by using `SHOW JOBS` as the data source for a [`SELECT`](select-clause.html) statement, and then filtering the values with the `WHERE` clause.

{{ partial "copy-clipboard.html" . }}
~~~ sql
> SELECT * FROM [SHOW JOBS] WHERE job_type = 'RESTORE' AND status IN ('running', 'failed') ORDER BY created DESC;
~~~

~~~
+----------------+------------+-------------------------------------------+...
| job_id         | job_type   | description                               |...
+----------------+------------+-------------------------------------------+...
| 27536791415282 | RESTORE    | RESTORE db.* FROM 'azure://backup/db/tbl' |...
+----------------+------------+-------------------------------------------+...
~~~

## See also

- [`PAUSE JOB`](pause-job.html)
- [`RESUME JOB`](pause-job.html)
- [`CANCEL JOB`](cancel-job.html)
- [`ALTER TABLE`](alter-table.html)
- [`BACKUP`](backup.html)
- [`RESTORE`](restore.html)
